--- a/css/style.css
+++ b/css/style.css
@@ -74,18 +74,25 @@ h1, h2 {
     width: 100px;
 }
 .menu ul {
+    background-color: rgba(0, 0, 0, 0.123);
     list-style: none;
     display: flex;
-    margin-top: 0px;
+    margin-top: 10px;
     padding: 0;
+    
 }
 .menu ul li {
-    margin: 0 10px;
+    margin: 10px;
 }
 .menu ul li a {
-    color: black;
-    text-shadow: 0px 0px 5px rgba(253, 252, 252, 0.507);
+    color: rgb(255, 255, 255);
     text-decoration: none;
+    font-size: 18px;
+}
+.menu ul li :hover {
+    font-size: 22px;
+    font-weight: 700;
+
 }
 
 .imagenCentrada{
