--- a/css/style.css
+++ b/css/style.css
@@ -57,11 +57,9 @@ p {
 }
 .instagramLogo{
     width: 30px;
-    height: 30px;
 }
 .facebookLogo {
     width: 30px;
-    height: 30px;
 }
 h2 { /*estilo de fuentes en los h2 de los articulos*/
     font-family: "Lato", sans-serif;
@@ -74,8 +72,8 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
 
 .gridContainer{
     display: grid;
-    grid-template-columns: repeat(2, 570px); /* 2 columnas de igual ancho */
-    grid-gap: 120px; /* Espacio entre las celdas de la cuadrícula */
+    grid-template-columns: repeat(2, 44%); /* 2 columnas de igual ancho */
+    grid-gap: 100px; /* Espacio entre las celdas de la cuadrícula */
     margin-top: 30px;
     margin-bottom: 30px;
     margin-right: 0px;
@@ -83,31 +81,42 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
 }
 .gridContainerCanaima{
     display: grid;
-    grid-template-columns: 569px 578px;
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 100px; 
     margin-top: 30px;
     margin-bottom: 30px;
     margin-right: 84px;
     margin-left: 84px;
+    justify-content: center;
 }
 .gridContainerMorrocoy {
     display: grid;
-    grid-template-columns: repeat(2, 650px);
-    grid-gap: 30px; 
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 100px; 
     padding: 30px;
     margin-top: 30px;
     margin-bottom: 30px;
+    margin-right: 84px;
+    margin-left: 84px;
+    justify-content: center;
 }
 .gridContainerRoques {
     display: grid;
-    grid-template-columns: repeat(2, 650px);
-    grid-gap: 30px; 
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 100px; 
     padding: 30px;
     margin-top: 30px;
     margin-bottom: 30px;
+    margin-right: 84px;
+    margin-left: 84px;
+    justify-content: center;
 }
 .gridItem {
     font-size: 18px;
+}
+.gridItem a img {
+    width: 100%;
+
 }
 .h2Articule{
     margin-left: 30px;
@@ -128,12 +137,10 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 0;
 }
 .Logo {
-    align-self: flex-start;
     margin: 0;
-    padding-right: 750px;
 }
 .Logo img {
     width: 100px;
@@ -163,10 +170,11 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
 .imagenCentrada{
     display: block;
     margin: 0 auto;
-    width: 1200px;
+    width: 100%;
     object-fit: contain; /*con object fit: contain podemos mantener la proporcion de la imagen mientras
     la agrandamos con width*/
-    margin-bottom: 30px;
+    margin-bottom: 80px;
+    border-bottom-right-radius: 50px
 }
 .imgArticuleRight {
     width: 600px;
@@ -175,13 +183,16 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
 .pMerida1{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    gap: 30px ;
-    padding: 30px;
+    justify-content: center;
+    gap: 100px ;
+    margin-left: 84px;
+    margin-right: 84px;
+    margin-bottom: 30px;
+    margin-top: 30px;
 }
 .pMerida2{
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 84px;
+    margin-right: 84px;
 }
 .imgTeleferico{
     width: 600px;
@@ -190,8 +201,9 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
     width: 600px;
 }
 .iframeYT {
-    display: flex;
-    justify-content: center;
+    display: block;
+    margin: 0 auto;
+    width: 1200px;
     border-radius: 80px;
     overflow: hidden;
     margin-bottom: 30px;
@@ -233,7 +245,21 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
     align-items: flex-end;
 }
 
+@media (max-width: 1024px){
+    .gridContainer{
+    }
+}
 @media (max-width: 768px){
+    .introText {
+        margin-left: 50px;
+        margin-right: 50px;
+        padding: 0;
+    }
+    .titulo {
+        height: 450px;
+        justify-content: flex-end;
+        margin-left: 30px;
+    }
     .gridContainer {
         display: flex;
         flex-direction: column;
@@ -304,29 +330,142 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
         font-size: 65px;
         padding-top: 0;
         margin-left: 0;
-}
-.tituloRoques{
-    margin-right: 15px;
-}
-.imgArticuleRight {
-    display: flex;
-    align-items: center;
-    width: 680px;
-    object-fit: contain;
-}
-.iframeYT {
-    width: 684px;
-    height: 456px;
-    border-radius: 10px;
-    margin: 0 auto;
+    }
+    .tituloRoques{
+        margin-right: 15px;
+    }
+    .imgArticuleRight {
+        display: flex;
+        align-items: center;
+        width: 680px;
+        object-fit: contain;
+    }
+    .iframeYT {
+        width: 684px;
+        height: 456px;
+        border-radius: 10px;
+        margin: 0 auto;
+    }
+    .pMerida1{
+        flex-direction: column;
+        align-items: center;
+    }
+    .introText{
+        font-size: 18px;
+    }
     
 }
-.pMerida1{
-    flex-direction: column;
-    align-items: center;
+@media (max-width: 425px){
+    .Logo {
+        padding: 0;
+    }
+    .menu {
+        flex-direction: row;
+        justify-content: space-between ;
+        padding: 0;
+        margin: 0;
+        width: 100%;
+    }
+    .menu ul {
+        justify-content: flex-start;
+        width: 70%;
+        
+    }
+    .Logo img {
+        width: 50px;
+        }
+    .menu ul li a {
+        font-size: 12px;
+    }
+    .menu ul li {
+        display: flex;
+        margin: 5px;
+        width: 400px;
+    }
+    .descubre {
+        font-size: 40px;
+        margin: 5px;
+    }
+    .mainTitle {
+        font-size: 50px;
+        margin: 0;
+    }
+    .introText {
+        font-size: 12px;
+        margin: 20px;
+    }
+    .pArticule {
+        font-size: 12px;
+    }
+    .gridItemCanaima p {
+        font-size: 12px;
+    }
+    .gridContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .gridItem {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+    }
+    .h2Articule{
+        font-size: 18px;
+        margin: 0;
+        padding: 0;
+    }
+    .menu ul li :hover {
+        font-size: 14px;
+    }
+    .footerStyle {
+        background-size: cover;
+        padding: 0;
+        margin: 0;
+    }
+    .footerStyle ul {
+        padding-right: 0;
+        gap: 10px;
+    }
+    .footerStyle ul li {
+        font-size: 12px;
+    }
+    .footerStyle ul li a{
+        font-size: 12px;
+    }
+    .instagramLogo {
+        width: 20px;
+    }
+    .facebookLogo {
+        width: 20px;
+    }
+    .imagenCentrada {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .gridContainerCanaima {
+        margin: 20px;
+        row-gap: 20px;
+    }
 }
-.introText{
-    font-size: 18px;
+@media (max-width: 375px){
+    .menu ul {
+        width: 80%;
+        
+    }
 }
-    
-}
+@media (max-width: 320px){
+    .menu ul {
+        width: 100%;
+    }
+    .Logo img {
+        width: 40px;
+        }
+        .menu ul li {
+            margin: 0;
+            width: 100%;
+            padding: 0;
+        }
+    }
