--- a/css/style.css
+++ b/css/style.css
@@ -1,471 +1,496 @@
-@import url('https://fonts.googleapis.com/css2?family=Arizonia&family=Asul:wght@700&family=Lato:wght@400;700;900&display=swap');
-* {font-family: "Lato", sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    font-style: normal;
-}
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Arizonia&family=Asul:wght@700&family=Lato:wght@400;700;900&display=swap");
 * {
-    margin: 0; /*reset de los estilos del navegador*/
-    padding: 0;
-    box-sizing: border-box;
+  font-family: "Lato", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  font-style: normal;
 }
+
+* {
+  margin: 0; /*reset de los estilos del navegador*/
+  padding: 0;
+  box-sizing: border-box;
+}
+
 p {
-    line-height: 1.6;
+  line-height: 1.6;
 }
+
 .introText {
-    font-size: 20px;
-    margin-left: 84px;
-    margin-right: 84px;
-    margin-top: 50px;
-    margin-bottom: 50px;
+  font-size: 20px;
+  margin-left: 84px;
+  margin-right: 84px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
+
 .footerStyle {
-    background-image: url(../assets/img/footerImagePicoBolivar.png);
-    background-size: cover;
-    background-position: left;
-    height: 100%;
-    color: white;
-    text-align: right;
-    padding-top: 100px;
-    list-style: none;
+  background-image: url(../assets/img/footerImagePicoBolivar.png);
+  background-size: cover;
+  background-position: left;
+  color: white;
+  text-align: right;
+  padding-top: 100px;
+  list-style: none;
 }
-.footerStyle ul{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.301);
-    gap: 20px;
-    padding-right: 80px;
+
+.footerStyle ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.301);
+  gap: 20px;
+  margin-right: 20px;
 }
 
 .footerStyle ul li a {
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    list-style: none;
-    font-size: 18px;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  list-style: none;
+  font-size: 18px;
 }
+
 .footerStyle ul li {
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    list-style: none;
-    font-size: 18px;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  list-style: none;
+  font-size: 18px;
 }
+
 .footerStyle ul li :hover {
-    font-size: 20px;
-    font-weight: 700;
+  font-size: 20px;
+  font-weight: 700;
 }
-.instagramLogo{
-    width: 30px;
+
+.instagramLogo {
+  width: 30px;
 }
+
 .facebookLogo {
-    width: 30px;
+  width: 30px;
 }
+
 h2 { /*estilo de fuentes en los h2 de los articulos*/
-    font-family: "Lato", sans-serif;
-    font-size: 25px;
-    font-weight: 900;
-    font-style: normal;
-    margin-top: 30px;
-    margin-bottom: 10px;
-} 
+  font-family: "Lato", sans-serif;
+  font-size: 25px;
+  font-weight: 900;
+  font-style: normal;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
 
-.gridContainer{
-    display: grid;
-    grid-template-columns: repeat(2, 44%); /* 2 columnas de igual ancho */
-    grid-gap: 100px; /* Espacio entre las celdas de la cuadrícula */
-    margin-top: 30px;
-    margin-bottom: 30px;
-    margin-right: 0px;
-    margin-left: 0px;
+.gridContainer {
+  display: grid;
+  grid-template-columns: repeat(2, 44%); /* 2 columnas de igual ancho */
+  grid-gap: 100px; /* Espacio entre las celdas de la cuadrícula */
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-right: 0px;
+  margin-left: 0px;
 }
-.gridContainerCanaima{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 100px; 
-    margin-top: 30px;
-    margin-bottom: 30px;
-    margin-right: 84px;
-    margin-left: 84px;
-    justify-content: center;
+
+.gridContainerCanaima {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 100px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-right: 84px;
+  margin-left: 84px;
+  justify-content: center;
 }
+
 .gridContainerMorrocoy {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 100px; 
-    padding: 30px;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    margin-right: 84px;
-    margin-left: 84px;
-    justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 100px;
+  padding: 30px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-right: 84px;
+  margin-left: 84px;
+  justify-content: center;
 }
+
 .gridContainerRoques {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 100px; 
-    padding: 30px;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    margin-right: 84px;
-    margin-left: 84px;
-    justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 100px;
+  padding: 30px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-right: 84px;
+  margin-left: 84px;
+  justify-content: center;
 }
+
 .gridItem {
-    font-size: 18px;
+  font-size: 18px;
 }
+
 .gridItem a img {
-    width: 100%;
+  width: 100%;
+}
 
+.h2Articule {
+  margin-left: 30px;
 }
-.h2Articule{
-    margin-left: 30px;
-}
+
 .pArticule {
-    margin-left: 30px;
-}
-.gridItemCanaima {
-    font-size: 18px;
-}
-.gridItemMorrocoy {
-    font-size: 18px;
-}
-.gridItemRoques {
-    font-size: 18px;
-}
-.menu { /*header*/
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0;
-}
-.Logo {
-    margin: 0;
-}
-.Logo img {
-    width: 100px;
-}
-.menu ul {
-    background-color: rgba(0, 0, 0, 0.37);
-    border-radius: 10px 0 0 10px;
-    list-style: none;
-    display: flex;
-    margin-top: 10px;
-    padding: 0;
-    
-}
-.menu ul li {
-    margin: 10px;
-}
-.menu ul li a {
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    font-size: 18px;
-}
-.menu ul li :hover {
-    font-size: 20px;
-    font-weight: 700;
+  margin-left: 30px;
 }
 
-.imagenCentrada{
-    display: block;
-    margin: 0 auto;
-    width: 100%;
-    object-fit: contain; /*con object fit: contain podemos mantener la proporcion de la imagen mientras
-    la agrandamos con width*/
-    margin-bottom: 80px;
-    border-bottom-right-radius: 50px
+.gridItemCanaima {
+  font-size: 18px;
 }
+
+.gridItemMorrocoy {
+  font-size: 18px;
+}
+
+.gridItemRoques {
+  font-size: 18px;
+}
+
+.menu { /*header*/
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+}
+
+.Logo {
+  margin: 0;
+}
+
+.Logo img {
+  width: 100px;
+}
+
+.menu ul {
+  background-color: rgba(0, 0, 0, 0.37);
+  border-radius: 10px 0 0 10px;
+  list-style: none;
+  display: flex;
+  margin-top: 10px;
+  padding: 0;
+}
+
+.menu ul li {
+  margin: 10px;
+}
+
+.menu ul li a {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.menu ul li :hover {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.imagenCentrada {
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  object-fit: contain; /*con object fit: contain podemos mantener la proporcion de la imagen mientras
+la agrandamos con width*/
+  margin-bottom: 80px;
+  border-bottom-right-radius: 50px;
+}
+
 .imgArticuleRight {
-    width: 600px;
-    object-fit: contain;
+  width: 600px;
+  object-fit: contain;
 }
-.pMerida1{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 100px ;
-    margin-left: 84px;
-    margin-right: 84px;
-    margin-bottom: 30px;
-    margin-top: 30px;
+
+.pMerida1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 100px;
+  margin-left: 84px;
+  margin-right: 84px;
+  margin-bottom: 30px;
+  margin-top: 30px;
 }
-.pMerida2{
-    margin-left: 84px;
-    margin-right: 84px;
+
+.pMerida2 {
+  margin-left: 84px;
+  margin-right: 84px;
 }
-.imgTeleferico{
-    width: 600px;
+
+.imgTeleferico {
+  width: 600px;
 }
+
 .imgBusto {
-    width: 600px;
+  width: 600px;
 }
+
 .iframeYT {
-    display: block;
-    margin: 0 auto;
-    width: 1200px;
-    border-radius: 80px;
-    overflow: hidden;
-    margin-bottom: 30px;
+  display: block;
+  margin: 0 auto;
+  width: 1200px;
+  border-radius: 80px;
+  overflow: hidden;
+  margin-bottom: 30px;
 }
+
 .titulo {
-    height: 500px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /*Error, no se esta centrando*/ /*habia que declarar el height*/
+  align-items: flex-start;
+}
+
+.descubre {
+  font-family: "Arizonia", cursive;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 60px;
+  color: white;
+  padding-bottom: 0;
+  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.589);
+}
+
+.mainTitle {
+  font-family: "Asul", serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 65px;
+  color: white;
+  padding-top: 0;
+  margin-left: 30px;
+  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.589);
+}
+
+.tituloRoques {
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+@media (max-width: 768px) {
+  .introText {
+    margin-left: 50px;
+    margin-right: 50px;
+    padding: 0;
+  }
+  .titulo {
+    height: 450px;
+    justify-content: flex-end;
+    margin-left: 30px;
+  }
+  .gridContainer {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end; /*Error, no se esta centrando*/ /*habia que declarar el height*/
-    align-items: flex-start;
-    
-}
-.descubre {
+    margin: 0 30px 0 30px;
+    padding: 0;
+  }
+  .gridContainerCanaima {
+    display: flex;
+    flex-direction: column;
+  }
+  .gridContainerMorrocoy {
+    display: flex;
+    flex-direction: column;
+  }
+  .gridContainerRoques {
+    display: flex;
+    flex-direction: column;
+  }
+  .gridItem {
+    display: grid;
+    grid-template-columns: repeat(2, 327px);
+    grid-template-rows: 30px 100%;
+    align-items: end;
+    row-gap: 10px;
+    column-gap: 30px;
+    padding: 0;
+    grid-template-areas: "h2Articule imgArticule" "pArticule imgArticule";
+  }
+  .gridItem img {
+    max-width: 325px;
+  }
+  .imagenCentrada {
+    width: 684px;
+  }
+  .h2Articule {
+    grid-area: h2Articule;
+    text-align: left;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 30px;
+  }
+  .imgArticule {
+    grid-area: imgArticule;
+  }
+  .pArticule {
+    grid-area: pArticule;
+  }
+  header {
+    height: 768px;
+  }
+  .Logo {
+    padding-right: 100px;
+  }
+  .descubre {
     font-family: "Arizonia", cursive;
     font-weight: 400;
     font-style: normal;
     font-size: 60px;
-    color: white;
     padding-bottom: 0;
-    text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.589);
-
-}
-.mainTitle {
+  }
+  .mainTitle {
     font-family: "Asul", serif;
     font-weight: 700;
     font-style: normal;
     font-size: 65px;
-    color: white;
     padding-top: 0;
-    margin-left: 30px;
-    text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.589);
-
+    margin-left: 0;
+  }
+  .tituloRoques {
+    margin-right: 15px;
+  }
+  .imgArticuleRight {
+    display: flex;
+    align-items: center;
+    width: 680px;
+    object-fit: contain;
+  }
+  .iframeYT {
+    width: 684px;
+    height: 456px;
+    border-radius: 10px;
+    margin: 0 auto;
+  }
+  .pMerida1 {
+    flex-direction: column;
+    align-items: center;
+  }
+  .introText {
+    font-size: 18px;
+  }
 }
-.tituloRoques {
-    height: 600px;
+@media (max-width: 425px) {
+  .Logo {
+    padding: 0;
+  }
+  .menu {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+  }
+  .menu ul {
+    justify-content: flex-start;
+    width: 70%;
+  }
+  .Logo img {
+    width: 50px;
+  }
+  .menu ul li a {
+    font-size: 12px;
+  }
+  .menu ul li {
+    display: flex;
+    margin: 5px;
+    width: 400px;
+  }
+  .descubre {
+    font-size: 40px;
+    margin: 5px;
+  }
+  .mainTitle {
+    font-size: 50px;
+    margin: 0;
+  }
+  .introText {
+    font-size: 12px;
+    margin: 20px;
+  }
+  .pArticule {
+    font-size: 12px;
+  }
+  .gridItemCanaima p {
+    font-size: 12px;
+  }
+  .gridContainer {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
+    align-items: center;
+  }
+  .gridItem {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+  }
+  .h2Articule {
+    font-size: 18px;
+    margin: 0;
+    padding: 0;
+  }
+  .menu ul li :hover {
+    font-size: 14px;
+  }
+  .footerStyle {
+    background-size: cover;
+    padding: 0;
+    margin: 0;
+  }
+  .footerStyle ul {
+    padding-right: 0;
+    gap: 10px;
+  }
+  .footerStyle ul li {
+    font-size: 12px;
+  }
+  .footerStyle ul li a {
+    font-size: 12px;
+  }
+  .instagramLogo {
+    width: 20px;
+  }
+  .facebookLogo {
+    width: 20px;
+  }
+  .imagenCentrada {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .gridContainerCanaima {
+    margin: 20px;
+    row-gap: 20px;
+  }
+}
+@media (max-width: 375px) {
+  .menu ul {
+    width: 80%;
+  }
+}
+@media (max-width: 320px) {
+  .menu ul {
+    width: 100%;
+  }
+  .Logo img {
+    width: 40px;
+  }
+  .menu ul li {
+    margin: 0;
+    width: 100%;
+    padding: 0;
+  }
 }
 
-@media (max-width: 1024px){
-    .gridContainer{
-    }
-}
-@media (max-width: 768px){
-    .introText {
-        margin-left: 50px;
-        margin-right: 50px;
-        padding: 0;
-    }
-    .titulo {
-        height: 450px;
-        justify-content: flex-end;
-        margin-left: 30px;
-    }
-    .gridContainer {
-        display: flex;
-        flex-direction: column;
-        margin: 0 30px 0 30px;
-        padding: 0;
-    }
-    .gridContainerCanaima {
-        display: flex;
-        flex-direction: column;
-    }
-    .gridContainerMorrocoy {
-        display: flex;
-        flex-direction: column;
-    }
-    .gridContainerRoques {
-        display: flex;
-        flex-direction: column;
-    }
-    .gridItem {
-        display: grid;
-        grid-template-columns: repeat(2, 327px);
-        grid-template-rows: 30px 100% ;
-        align-items: end;
-        row-gap: 10px ;
-        column-gap: 30px;
-        padding: 0;
-        grid-template-areas: 
-        "h2Articule imgArticule"
-        "pArticule imgArticule"
-        ;
-    }
-    .gridItem img {
-        max-width: 325px;
-    }
-    .imagenCentrada{
-        width: 684px;
-    }
-    .h2Articule {
-        grid-area: h2Articule;
-        text-align: left;
-        margin-top: 0;
-        margin-bottom: 0;
-        padding-top: 30px;
-    }
-    .imgArticule {
-        grid-area: imgArticule;
-    }
-    .pArticule {
-        grid-area: pArticule;
-    }
-    header {
-        height: 768px;
-    }
-    .Logo {
-        padding-right: 100px;
-    }
-    .descubre {
-        font-family: "Arizonia", cursive;
-        font-weight: 400;
-        font-style: normal;
-        font-size: 60px;
-        padding-bottom: 0;
-    }
-    .mainTitle {
-        font-family: "Asul", serif;
-        font-weight: 700;
-        font-style: normal;
-        font-size: 65px;
-        padding-top: 0;
-        margin-left: 0;
-    }
-    .tituloRoques{
-        margin-right: 15px;
-    }
-    .imgArticuleRight {
-        display: flex;
-        align-items: center;
-        width: 680px;
-        object-fit: contain;
-    }
-    .iframeYT {
-        width: 684px;
-        height: 456px;
-        border-radius: 10px;
-        margin: 0 auto;
-    }
-    .pMerida1{
-        flex-direction: column;
-        align-items: center;
-    }
-    .introText{
-        font-size: 18px;
-    }
-    
-}
-@media (max-width: 425px){
-    .Logo {
-        padding: 0;
-    }
-    .menu {
-        flex-direction: row;
-        justify-content: space-between ;
-        padding: 0;
-        margin: 0;
-        width: 100%;
-    }
-    .menu ul {
-        justify-content: flex-start;
-        width: 70%;
-        
-    }
-    .Logo img {
-        width: 50px;
-        }
-    .menu ul li a {
-        font-size: 12px;
-    }
-    .menu ul li {
-        display: flex;
-        margin: 5px;
-        width: 400px;
-    }
-    .descubre {
-        font-size: 40px;
-        margin: 5px;
-    }
-    .mainTitle {
-        font-size: 50px;
-        margin: 0;
-    }
-    .introText {
-        font-size: 12px;
-        margin: 20px;
-    }
-    .pArticule {
-        font-size: 12px;
-    }
-    .gridItemCanaima p {
-        font-size: 12px;
-    }
-    .gridContainer {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .gridItem {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 0;
-        padding: 0;
-    }
-    .h2Articule{
-        font-size: 18px;
-        margin: 0;
-        padding: 0;
-    }
-    .menu ul li :hover {
-        font-size: 14px;
-    }
-    .footerStyle {
-        background-size: cover;
-        padding: 0;
-        margin: 0;
-    }
-    .footerStyle ul {
-        padding-right: 0;
-        gap: 10px;
-    }
-    .footerStyle ul li {
-        font-size: 12px;
-    }
-    .footerStyle ul li a{
-        font-size: 12px;
-    }
-    .instagramLogo {
-        width: 20px;
-    }
-    .facebookLogo {
-        width: 20px;
-    }
-    .imagenCentrada {
-        width: 100%;
-        margin-bottom: 20px;
-    }
-    .gridContainerCanaima {
-        margin: 20px;
-        row-gap: 20px;
-    }
-}
-@media (max-width: 375px){
-    .menu ul {
-        width: 80%;
-        
-    }
-}
-@media (max-width: 320px){
-    .menu ul {
-        width: 100%;
-    }
-    .Logo img {
-        width: 40px;
-        }
-        .menu ul li {
-            margin: 0;
-            width: 100%;
-            padding: 0;
-        }
-    }
+/*# sourceMappingURL=style.css.map */
