--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,10 +22,10 @@ p {
 .footerStyle {
     background-image: url(../assets/img/footerImagePicoBolivar.png);
     background-size: cover;
-    background-position: left;
+    background-position: center;
     color: white;
     text-align: right;
-    padding-top: 100px;
+    padding-top: 150px;
     list-style: none;
 }
 .footerStyle ul{
@@ -71,6 +71,7 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
 
 .gridContainer{
     display: grid;
+    justify-content: center;
     grid-template-columns: repeat(2, 44%); /* 2 columnas de igual ancho */
     grid-gap: 100px; /* Espacio entre las celdas de la cuadrícula */
     margin-top: 30px;
@@ -78,6 +79,7 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
     margin-right: 0px;
     margin-left: 0px;
 }
+
 .gridContainerCanaima{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -132,40 +134,15 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
 .gridItemRoques {
     font-size: 18px;
 }
-.menu { /*header*/
+
+.nav-container {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0;
+    justify-content: flex-end;
 }
 .Logo {
     margin: 0;
+    width: 80px;
 }
-.Logo img {
-    width: 100px;
-}
-.menu ul {
-    background-color: rgba(0, 0, 0, 0.37);
-    border-radius: 10px 0 0 10px;
-    list-style: none;
-    display: flex;
-    margin-top: 10px;
-    padding: 0;
-    
-}
-.menu ul li {
-    margin: 10px;
-}
-.menu ul li a {
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    font-size: 18px;
-}
-.menu ul li :hover {
-    font-size: 20px;
-    font-weight: 700;
-}
-
 .imagenCentrada{
     display: block;
     margin: 0 auto;
@@ -173,7 +150,8 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
     object-fit: contain; /*con object fit: contain podemos mantener la proporcion de la imagen mientras
     la agrandamos con width*/
     margin-bottom: 80px;
-    border-bottom-right-radius: 50px
+    border-bottom-right-radius: 50px;
+    border-top-left-radius: 50px;
 }
 .imgArticuleRight {
     width: 600px;
@@ -199,19 +177,20 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
 .imgBusto {
     width: 600px;
 }
-.iframeYT {
+iframe {
     display: block;
     margin: 0 auto;
-    width: 1200px;
-    border-radius: 80px;
+    width: 90%;
+    height: 600px;
+    border-radius: 50px;
     overflow: hidden;
     margin-bottom: 30px;
 }
 .titulo {
-    height: 500px;
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end; /*Error, no se esta centrando*/ /*habia que declarar el height*/
+    justify-content: center; /*Error, no se esta centrando*/ /*habia que declarar el height*/
     align-items: flex-start;
     
 }
@@ -245,6 +224,12 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
 }
 
 @media (max-width: 1024px){
+    .gridContainer {
+        grid-gap: 50px;
+    }
+    .titulo {
+        justify-content: flex-end;
+    }
 }
 @media (max-width: 768px){
     .introText {
@@ -270,10 +255,13 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
     .gridContainerMorrocoy {
         display: flex;
         flex-direction: column;
+        gap: 30px;
     }
     .gridContainerRoques {
         display: flex;
         flex-direction: column;
+        margin: 0 30px 0 30px;
+        gap: 30px;
     }
     .gridItem {
         display: grid;
@@ -288,8 +276,9 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
         "pArticule imgArticule"
         ;
     }
-    .gridItem img {
+    .gridItem .imgArticule {
         max-width: 325px;
+        padding-bottom: 25px;
     }
     .imagenCentrada{
         width: 684px;
@@ -311,7 +300,8 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
         height: 768px;
     }
     .Logo {
-        padding-right: 100px;
+        padding-right: 0;
+        width: 60px;
     }
     .descubre {
         font-family: "Arizonia", cursive;
@@ -337,24 +327,32 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
         width: 680px;
         object-fit: contain;
     }
-    .iframeYT {
-        width: 684px;
+    iframe {
         height: 456px;
         border-radius: 10px;
-        margin: 0 auto;
     }
     .pMerida1{
         flex-direction: column;
         align-items: center;
+        gap: 30px;
     }
     .introText{
         font-size: 18px;
     }
+    .footerStyle{
+        padding-top: 60px;
+        margin-top: 50px;
+    }
     
 }
 @media (max-width: 425px){
+    header {
+        height: 425px;
+        /*probar con la propiedasd 100vh*/
+    }
     .Logo {
         padding: 0;
+        width: 50px;
     }
     .menu {
         flex-direction: row;
@@ -379,6 +377,9 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
         margin: 5px;
         width: 400px;
     }
+    .titulo {
+        justify-content: center;
+    }
     .descubre {
         font-size: 40px;
         margin: 5px;
@@ -397,10 +398,19 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
     .gridItemCanaima p {
         font-size: 12px;
     }
+    .gridContainerRoques p {
+        font-size: 12px;
+    }
     .gridContainer {
         display: flex;
         flex-direction: column;
         align-items: center;
+        gap: 30px;
+    }
+    .gridContainerRoques {
+        padding: 0;
+        margin: 20px;
+        gap: 20px;
     }
     .gridItem {
         display: flex;
@@ -421,6 +431,7 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
         background-size: cover;
         padding: 0;
         margin: 0;
+        padding-top: 30px;
     }
     .footerStyle ul {
         padding-right: 0;
@@ -446,11 +457,22 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
         margin: 20px;
         row-gap: 20px;
     }
+    iframe{
+        height: 256px;
+    }
+    .pArticule {
+        margin: 0;
+    }
+    .imgArticule {
+        width: 100%;
+    }
 }
 @media (max-width: 375px){
     .menu ul {
         width: 80%;
-        
+    }
+    .pArticule {
+        margin: 0;
     }
 }
 @media (max-width: 320px){
@@ -464,5 +486,20 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
             margin: 0;
             width: 100%;
             padding: 0;
+        }
+        .footerStyle{
+            padding-top: 30px;
+        }
+        .pArticule {
+            margin: 0;
+        }
+        .descubre {
+            font-size: 30px;
+        }
+        .mainTitle {
+            font-size: 40px;
+        }
+        .titulo {
+            margin: 20px;
         }
     }
