--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
   font-size: 18px;
   font-weight: 400;
   font-style: normal;
+  line-height: 1.6;
 }
 
 * {
@@ -13,8 +14,9 @@
   box-sizing: border-box;
 }
 
-p {
-  line-height: 1.6;
+.Logo {
+  margin: 0;
+  width: 80px;
 }
 
 .introText {
@@ -25,53 +27,6 @@ p {
   margin-bottom: 50px;
 }
 
-.footerStyle {
-  background-image: url(../assets/img/footerImagePicoBolivar.png);
-  background-size: cover;
-  background-position: center;
-  color: white;
-  text-align: right;
-  padding-top: 150px;
-  list-style: none;
-}
-
-.footerStyle ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.301);
-  gap: 20px;
-  margin-right: 20px;
-}
-
-.footerStyle ul li a {
-  color: rgb(255, 255, 255);
-  text-decoration: none;
-  list-style: none;
-  font-size: 18px;
-}
-
-.footerStyle ul li {
-  color: rgb(255, 255, 255);
-  text-decoration: none;
-  list-style: none;
-  font-size: 18px;
-}
-
-.footerStyle ul li :hover {
-  font-size: 20px;
-  font-weight: 700;
-}
-
-.instagramLogo {
-  width: 30px;
-}
-
-.facebookLogo {
-  width: 30px;
-}
-
 h2 { /*estilo de fuentes en los h2 de los articulos*/
   font-family: "Lato", sans-serif;
   font-size: 25px;
@@ -79,6 +34,35 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
   font-style: normal;
   margin-top: 30px;
   margin-bottom: 10px;
+}
+
+.titulo {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /*Error, no se esta centrando*/ /*habia que declarar el height*/
+  align-items: flex-start;
+}
+
+.descubre {
+  font-family: "Arizonia", cursive;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 60px;
+  color: white;
+  padding-bottom: 0;
+  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.589);
+}
+
+.mainTitle {
+  font-family: "Asul", serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 65px;
+  color: white;
+  padding-top: 0;
+  margin-left: 30px;
+  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.589);
 }
 
 .gridContainer {
@@ -91,78 +75,8 @@ h2 { /*estilo de fuentes en los h2 de los articulos*/
   margin-right: 0px;
   margin-left: 0px;
 }
-
-.gridContainerCanaima {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 100px;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  margin-right: 84px;
-  margin-left: 84px;
-  justify-content: center;
-}
-
-.gridContainerMorrocoy {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 100px;
-  padding: 30px;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  margin-right: 84px;
-  margin-left: 84px;
-  justify-content: center;
-}
-
-.gridContainerRoques {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 100px;
-  padding: 30px;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  margin-right: 84px;
-  margin-left: 84px;
-  justify-content: center;
-}
-
-.gridItem {
-  font-size: 18px;
-}
-
-.gridItem a img {
+.gridContainer .gridItem .imgArticule {
   width: 100%;
-}
-
-.h2Articule {
-  margin-left: 30px;
-}
-
-.pArticule {
-  margin-left: 30px;
-}
-
-.gridItemCanaima {
-  font-size: 18px;
-}
-
-.gridItemMorrocoy {
-  font-size: 18px;
-}
-
-.gridItemRoques {
-  font-size: 18px;
-}
-
-.nav-container {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.Logo {
-  margin: 0;
-  width: 80px;
 }
 
 .imagenCentrada {
@@ -179,6 +93,58 @@ la agrandamos con width*/
 .imgArticuleRight {
   width: 600px;
   object-fit: contain;
+}
+
+.gridContainerCanaima {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 100px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-right: 84px;
+  margin-left: 84px;
+  justify-content: center;
+}
+
+.text-focus-in {
+  -webkit-animation: text-focus-in 2s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
+  animation: text-focus-in 2s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
+}
+
+@-webkit-keyframes text-focus-in {
+  0% {
+    -webkit-filter: blur(12px);
+    filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+    filter: blur(0px);
+    opacity: 1;
+  }
+}
+@keyframes text-focus-in {
+  0% {
+    -webkit-filter: blur(12px);
+    filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+    filter: blur(0px);
+    opacity: 1;
+  }
+}
+.gridContainerMorrocoy {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 100px;
+  padding: 30px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-right: 84px;
+  margin-left: 84px;
+  justify-content: center;
 }
 
 .pMerida1 {
@@ -215,41 +181,89 @@ iframe {
   margin-bottom: 30px;
 }
 
-.titulo {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center; /*Error, no se esta centrando*/ /*habia que declarar el height*/
-  align-items: flex-start;
-}
-
-.descubre {
-  font-family: "Arizonia", cursive;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 60px;
-  color: white;
-  padding-bottom: 0;
-  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.589);
-}
-
-.mainTitle {
-  font-family: "Asul", serif;
-  font-weight: 700;
-  font-style: normal;
-  font-size: 65px;
-  color: white;
-  padding-top: 0;
-  margin-left: 30px;
-  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.589);
-}
-
 .tituloRoques {
   height: 600px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-end;
+}
+
+.boat-container {
+  width: 70%;
+  display: flex;
+  justify-content: flex-end;
+  animation: boat 3s linear infinite;
+}
+.boat-container img {
+  width: 150px;
+}
+
+@keyframes boat {
+  0% {
+    transform: rotate(0);
+  }
+  50% {
+    transform: rotate(-1deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
+.gridContainerRoques {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 100px;
+  padding: 30px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-right: 84px;
+  margin-left: 84px;
+  justify-content: center;
+}
+
+.carousel-caption h5 {
+  color: rgb(255, 255, 255);
+  text-shadow: 3px 3px 3px black;
+}
+
+.footerStyle {
+  background-image: url(../assets/img/footerImagePicoBolivar.png);
+  background-size: cover;
+  background-position: center;
+  color: white;
+  text-align: right;
+  padding-top: 150px;
+  list-style: none;
+}
+.footerStyle ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.301);
+  gap: 20px;
+  margin-right: 20px;
+}
+.footerStyle ul li {
+  color: white;
+  text-decoration: none;
+  list-style: none;
+}
+.footerStyle ul li a {
+  color: white;
+  text-decoration: none;
+  list-style: none;
+}
+.footerStyle ul li a:hover {
+  font-size: 20px;
+  font-weight: 500;
+}
+.footerStyle ul li .instagramLogo {
+  width: 30px;
+}
+.footerStyle ul li .facebookLogo {
+  width: 30px;
 }
 
 @media (max-width: 1024px) {
@@ -261,6 +275,9 @@ iframe {
   }
 }
 @media (max-width: 768px) {
+  header {
+    height: 768px;
+  }
   .introText {
     margin-left: 50px;
     margin-right: 50px;
@@ -271,19 +288,51 @@ iframe {
     justify-content: flex-end;
     margin-left: 30px;
   }
+  .imagenCentrada {
+    width: 684px;
+  }
   .gridContainer {
     display: flex;
     flex-direction: column;
     margin: 0 30px 0 30px;
     padding: 0;
   }
+  .gridContainer .gridItem {
+    display: grid;
+    grid-template-columns: repeat(2, 327px);
+    grid-template-rows: 30px 100%;
+    align-items: end;
+    row-gap: 10px;
+    column-gap: 30px;
+    padding: 0;
+    margin-bottom: 30px;
+    grid-template-areas: "h2Articule h2Articule" "pArticule imgArticule";
+  }
+  .gridContainer .gridItem .imgArticule {
+    width: 325px;
+    padding-bottom: 25px;
+    grid-area: imgArticule;
+  }
+  .gridContainer .gridItem .h2Articule {
+    grid-area: h2Articule;
+    text-align: left;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 0;
+  }
+  .gridContainer .gridItem .pArticule {
+    grid-area: pArticule;
+  }
   .gridContainerCanaima {
     display: flex;
     flex-direction: column;
+    margin: 0 30px 0 30px;
+    gap: 30px;
   }
   .gridContainerMorrocoy {
     display: flex;
     flex-direction: column;
+    margin: 0 30px 0 30px;
     gap: 30px;
   }
   .gridContainerRoques {
@@ -292,38 +341,13 @@ iframe {
     margin: 0 30px 0 30px;
     gap: 30px;
   }
-  .gridItem {
-    display: grid;
-    grid-template-columns: repeat(2, 327px);
-    grid-template-rows: 30px 100%;
-    align-items: end;
-    row-gap: 10px;
-    column-gap: 30px;
-    padding: 0;
-    grid-template-areas: "h2Articule imgArticule" "pArticule imgArticule";
+  .boat-container {
+    width: 70%;
+    display: flex;
+    justify-content: flex-end;
   }
-  .gridItem .imgArticule {
-    max-width: 325px;
-    padding-bottom: 25px;
-  }
-  .imagenCentrada {
-    width: 684px;
-  }
-  .h2Articule {
-    grid-area: h2Articule;
-    text-align: left;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-top: 30px;
-  }
-  .imgArticule {
-    grid-area: imgArticule;
-  }
-  .pArticule {
-    grid-area: pArticule;
-  }
-  header {
-    height: 768px;
+  .boat-container img {
+    width: 120px;
   }
   .Logo {
     padding-right: 0;
@@ -346,6 +370,7 @@ iframe {
   }
   .tituloRoques {
     margin-right: 15px;
+    height: 80vh;
   }
   .imgArticuleRight {
     display: flex;
@@ -369,37 +394,17 @@ iframe {
     padding-top: 60px;
     margin-top: 50px;
   }
+  .nav-link {
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.308);
+  }
 }
 @media (max-width: 425px) {
   header {
-    height: 425px;
+    height: 100vh;
     /*probar con la propiedasd 100vh*/
   }
   .Logo {
-    padding: 0;
     width: 50px;
-  }
-  .menu {
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-  }
-  .menu ul {
-    justify-content: flex-start;
-    width: 70%;
-  }
-  .Logo img {
-    width: 50px;
-  }
-  .menu ul li a {
-    font-size: 12px;
-  }
-  .menu ul li {
-    display: flex;
-    margin: 5px;
-    width: 400px;
   }
   .titulo {
     justify-content: center;
@@ -425,16 +430,52 @@ iframe {
   .gridContainerRoques p {
     font-size: 12px;
   }
+  .tituloRoques {
+    height: 70vh;
+  }
+  .boat-container {
+    width: 75%;
+    display: flex;
+    justify-content: flex-end;
+  }
+  .boat-container img {
+    width: 100px;
+  }
   .gridContainer {
+    display: flex;
+  }
+  .gridContainer .gridItem {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+  }
+  .gridContainer .gridItem a .imgArticule {
+    width: 100%;
+  }
+  .gridContainer .gridItem a .h2Articule {
+    padding: 0;
   }
   .gridContainerRoques {
     padding: 0;
     margin: 20px;
     gap: 20px;
+  }
+  .gridContainerMorrocoy {
+    padding: 0;
+    margin: 0 30px 0 30px;
+  }
+  .gridContainerMorrocoy .gridItemMorrocoy p {
+    font-size: 12px;
+  }
+  .pMerida1 {
+    margin: 30px 30px 0 30px;
+  }
+  .pMerida1 p {
+    font-size: 12px;
+  }
+  .pMerida2 {
+    margin: 30px 30px 0 30px;
+    font-size: 12px;
   }
   .gridItem {
     display: flex;
@@ -447,9 +488,6 @@ iframe {
     font-size: 18px;
     margin: 0;
     padding: 0;
-  }
-  .menu ul li :hover {
-    font-size: 14px;
   }
   .footerStyle {
     background-size: cover;
@@ -492,24 +530,28 @@ iframe {
   }
 }
 @media (max-width: 375px) {
-  .menu ul {
-    width: 80%;
+  .Logo {
+    width: 40px;
   }
   .pArticule {
     margin: 0;
   }
+  .pMerida1 {
+    margin: 20px;
+  }
+  .pMerida1 p {
+    font-size: 12px;
+  }
+  .pMerida2 {
+    margin: 20px;
+  }
+  .pMerida2 {
+    font-size: 12px;
+  }
 }
 @media (max-width: 320px) {
-  .menu ul {
-    width: 100%;
-  }
   .Logo img {
     width: 40px;
-  }
-  .menu ul li {
-    margin: 0;
-    width: 100%;
-    padding: 0;
   }
   .footerStyle {
     padding-top: 30px;
