--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,571 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Arizonia&family=Asul:wght@700&family=Lato:wght@400;700;900&display=swap');
-* {font-family: "Lato", sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    font-style: normal;
-    line-height: 1.6;
-}
-* {
-    margin: 0; /*reset de los estilos del navegador*/
-    padding: 0;
-    box-sizing: border-box;
-}
 
-.Logo {
-    margin: 0;
-    width: 80px;
-}
-.introText {
-    font-size: 20px;
-    margin-left: 84px;
-    margin-right: 84px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-h2 { /*estilo de fuentes en los h2 de los articulos*/
-    font-family: "Lato", sans-serif;
-    font-size: 25px;
-    font-weight: 900;
-    font-style: normal;
-    margin-top: 30px;
-    margin-bottom: 10px;
-} 
-.titulo {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center; /*Error, no se esta centrando*/ /*habia que declarar el height*/
-    align-items: flex-start;
-    
-}
-.descubre {
-    font-family: "Arizonia", cursive;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 60px;
-    color: white;
-    padding-bottom: 0;
-    text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.589);
+/*utilities*/
+@import "./utilities/maps";
+@import "./utilities/variables";
+@import "./utilities/mixins";
 
-}
-.mainTitle {
-    font-family: "Asul", serif;
-    font-weight: 700;
-    font-style: normal;
-    font-size: 65px;
-    color: white;
-    padding-top: 0;
-    margin-left: 30px;
-    text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.589);
+/*base*/
+@import "./base/reset";
 
-}
-.gridContainer{
-    display: grid;
-    justify-content: center;
-    grid-template-columns: repeat(2, 44%); /* 2 columnas de igual ancho */
-    grid-gap: 100px; /* Espacio entre las celdas de la cuadrícula */
-    margin-top: 30px;
-    margin-bottom: 30px;
-    margin-right: 0px;
-    margin-left: 0px;
-    .gridItem {
-        .imgArticule {
-            width: 100%;
-        }
-    }
-}
-.imagenCentrada{
-    display: block;
-    margin: 0 auto;
-    width: 100%;
-    object-fit: contain; /*con object fit: contain podemos mantener la proporcion de la imagen mientras
-    la agrandamos con width*/
-    margin-bottom: 80px;
-    border-bottom-right-radius: 50px;
-    border-top-left-radius: 50px;
-}
-.imgArticuleRight {
-    width: 600px;
-    object-fit: contain;
-}
-//*Canaima*//
-.gridContainerCanaima{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 100px; 
-    margin-top: 30px;
-    margin-bottom: 30px;
-    margin-right: 84px;
-    margin-left: 84px;
-    justify-content: center;
-}
-.text-focus-in {
-	-webkit-animation: text-focus-in 2s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-	        animation: text-focus-in 2s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-}
- @-webkit-keyframes text-focus-in {
-    0% {
-      -webkit-filter: blur(12px);
-              filter: blur(12px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-filter: blur(0px);
-              filter: blur(0px);
-      opacity: 1;
-    }
-  }
-  @keyframes text-focus-in {
-    0% {
-      -webkit-filter: blur(12px);
-              filter: blur(12px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-filter: blur(0px);
-              filter: blur(0px);
-      opacity: 1;
-    }
-  }
-  
-//*Morrocoy*//
-.gridContainerMorrocoy {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 100px; 
-    padding: 30px;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    margin-right: 84px;
-    margin-left: 84px;
-    justify-content: center;
-}
+/*layout*/
+@import "./layout/header";
+@import "./layout/main";
+@import "./layout/footer";
 
-//*Merida*//
-.pMerida1{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 100px ;
-    margin-left: 84px;
-    margin-right: 84px;
-    margin-bottom: 30px;
-    margin-top: 30px;
-}
-.pMerida2{
-    margin-left: 84px;
-    margin-right: 84px;
-}
-.imgTeleferico{
-    width: 600px;
-}
-.imgBusto {
-    width: 600px;
-}
-//*Los Roques*//
-iframe {
-    display: block;
-    margin: 0 auto;
-    width: 90%;
-    height: 600px;
-    border-radius: 50px;
-    overflow: hidden;
-    margin-bottom: 30px;
-}
-.tituloRoques {
-    height: 600px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-}
-.boat-container {
-    width: 70%;
-    display: flex;
-    justify-content: flex-end;
-    img{
-        width: 150px;
-    }
-    animation: boat 3s linear infinite;
-}
-@keyframes boat{
-	0%{
-		transform: rotate(0);
-	}
+/*components*/
+@import "./components/bootstrap";
 
-	50%{
-		transform: rotate(-1deg);
-	}
+/*media queries*/
 
-	100%{
-		transform: rotate(0);
-	}
-}
-.gridContainerRoques {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 100px; 
-    padding: 30px;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    margin-right: 84px;
-    margin-left: 84px;
-    justify-content: center;
-}
-.carousel-caption {
-    h5 {
-        color: rgb(255, 255, 255);
-        text-shadow: 3px 3px 3px black; 
-    }
-}
-
-//*footer*//
-.footerStyle {
-    background-image: url(../assets/img/footerImagePicoBolivar.png);
-    background-size: cover;
-    background-position: center;
-    color: white;
-    text-align: right;
-    padding-top: 150px;
-    list-style: none;
-    ul{
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-end;
-        align-items: center;
-        background-color: rgba(0, 0, 0, 0.301);
-        gap: 20px;
-        margin-right: 20px;
-        li {
-            color: white;
-            text-decoration: none;
-            list-style: none;
-            a {
-                color: white;
-                text-decoration: none;
-                list-style: none;
-                &:hover{
-                    font-size: 20px;
-                    font-weight: 500;
-                }
-            }
-            .instagramLogo {
-                width: 30px;
-            }
-            .facebookLogo {
-                width: 30px;
-            }
-        }
-    }
-}
-
-@media (max-width: 1024px){
-    .gridContainer {
-        grid-gap: 50px;
-    }
-    .titulo {
-        justify-content: flex-end;
-    }
-}
-@media (max-width: 768px){
-    header{
-        height: 768px;
-    }
-    .introText {
-        margin-left: 50px;
-        margin-right: 50px;
-        padding: 0;
-    }
-    .titulo {
-        height: 450px;
-        justify-content: flex-end;
-        margin-left: 30px;
-    }
-    .imagenCentrada{
-        width: 684px;
-    }
-    .gridContainer {
-        display: flex;
-        flex-direction: column;
-        margin: 0 30px 0 30px;
-        padding: 0;
-        .gridItem{
-            display: grid;
-            grid-template-columns: repeat(2, 327px);
-            grid-template-rows: 30px 100%;
-            align-items: end;
-            row-gap: 10px;
-            column-gap: 30px;
-            padding: 0;
-            margin-bottom: 30px;
-            grid-template-areas:
-            "h2Articule h2Articule"
-            "pArticule imgArticule"
-            ;
-            .imgArticule{
-                width: 325px;
-                padding-bottom: 25px;
-                grid-area: imgArticule;
-            }
-            .h2Articule{
-                grid-area: h2Articule;
-                text-align: left;
-                margin-top: 0;
-                margin-bottom: 0;
-                padding-top: 0;
-            }
-            .pArticule{
-                grid-area: pArticule;
-            }
-        }
-    }
-    .gridContainerCanaima {
-        display: flex;
-        flex-direction: column;
-        margin: 0 30px 0 30px;
-        gap: 30px;
-    }
-    .gridContainerMorrocoy {
-        display: flex;
-        flex-direction: column;
-        margin: 0 30px 0 30px;
-        gap: 30px;
-    }
-    .gridContainerRoques {
-        display: flex;
-        flex-direction: column;
-        margin: 0 30px 0 30px;
-        gap: 30px;
-    }
-    .boat-container{
-        width: 70%;
-        display: flex;
-        justify-content: flex-end;
-        img{
-            width: 120px;
-        }
-    }
-    .Logo {
-        padding-right: 0;
-        width: 60px;
-    }
-    .descubre {
-        font-family: "Arizonia", cursive;
-        font-weight: 400;
-        font-style: normal;
-        font-size: 60px;
-        padding-bottom: 0;
-    }
-    .mainTitle {
-        font-family: "Asul", serif;
-        font-weight: 700;
-        font-style: normal;
-        font-size: 65px;
-        padding-top: 0;
-        margin-left: 0;
-    }
-    .tituloRoques{
-        margin-right: 15px;
-        height: 80vh;
-    }
-    .imgArticuleRight {
-        display: flex;
-        align-items: center;
-        width: 680px;
-        object-fit: contain;
-    }
-    iframe {
-        height: 456px;
-        border-radius: 10px;
-    }
-    .pMerida1{
-        flex-direction: column;
-        align-items: center;
-        gap: 30px;
-    }
-    .introText{
-        font-size: 18px;
-    }
-    .footerStyle{
-        padding-top: 60px;
-        margin-top: 50px;
-    }
-    .nav-link{
-        text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.308);
-    }
-}
-@media (max-width: 425px){
-    header {
-        height: 100vh;
-        /*probar con la propiedasd 100vh*/
-    }
-    .Logo {
-        width: 50px;
-    }
-    .titulo {
-        justify-content: center;
-    }
-    .descubre {
-        font-size: 40px;
-        margin: 5px;
-    }
-    .mainTitle {
-        font-size: 50px;
-        margin: 0;
-    }
-    .introText {
-        font-size: 12px;
-        margin: 20px;
-    }
-    .pArticule {
-        font-size: 12px;
-    }
-    .gridItemCanaima p {
-        font-size: 12px;
-    }
-    .gridContainerRoques p {
-        font-size: 12px;
-    }
-    .tituloRoques{
-        height: 70vh;
-    }
-    .boat-container {
-        width: 75%;
-        display: flex;
-        justify-content: flex-end;
-        img{
-            width: 100px;
-        }
-    }
-    .gridContainer{
-        display: flex;
-        .gridItem {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            a{
-                .imgArticule{
-                    width: 100%;
-                }
-            .h2Articule{
-                padding: 0;
-            }
-            }
-        }
-    }
-    .gridContainerRoques {
-        padding: 0;
-        margin: 20px;
-        gap: 20px;
-    }
-    .gridContainerMorrocoy{
-        padding: 0;
-        margin: 0 30px 0 30px;
-        .gridItemMorrocoy {
-            p{
-                font-size: 12px;
-            }
-        }
-    }
-    .pMerida1{
-        margin: 30px 30px 0 30px;
-        p{
-            font-size: 12px;
-        }
-    }
-    .pMerida2{
-        margin: 30px 30px 0 30px;
-        font-size: 12px;
-    }
-    .gridItem {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 0;
-        padding: 0;
-    }
-    .h2Articule{
-        font-size: 18px;
-        margin: 0;
-        padding: 0;
-    }
-    .footerStyle {
-        background-size: cover;
-        padding: 0;
-        margin: 0;
-        padding-top: 30px;
-    }
-    .footerStyle ul {
-        padding-right: 0;
-        gap: 10px;
-    }
-    .footerStyle ul li {
-        font-size: 12px;
-    }
-    .footerStyle ul li a{
-        font-size: 12px;
-    }
-    .instagramLogo {
-        width: 20px;
-    }
-    .facebookLogo {
-        width: 20px;
-    }
-    .imagenCentrada {
-        width: 100%;
-        margin-bottom: 20px;
-    }
-    .gridContainerCanaima {
-        margin: 20px;
-        row-gap: 20px;
-    }
-    iframe{
-        height: 256px;
-    }
-    .pArticule {
-        margin: 0;
-    }
-    .imgArticule {
-        width: 100%;
-    }
-}
-@media (max-width: 375px){
-    .Logo {
-        width: 40px;
-    }
-    .pArticule {
-        margin: 0;
-    }
-    .pMerida1 {
-        margin: 20px;
-    }
-    .pMerida1 p {
-        font-size: 12px;
-    }
-    .pMerida2 {
-        margin: 20px;
-    }
-    .pMerida2 {
-        font-size: 12px;
-    }
-}
-@media (max-width: 320px){
-    .Logo img {
-        width: 40px;
-        }
-    .footerStyle{
-        padding-top: 30px;
-    }
-    .pArticule {
-        margin: 0;
-    }
-    .descubre {
-        font-size: 30px;
-    }
-    .mainTitle {
-        font-size: 40px;
-    }
-    .titulo {
-        margin: 20px;
-    }
-}
+@import "./layout/MediaQueries/media1024p";
+@import "./layout/MediaQueries/media768p";
+@import "./layout/MediaQueries/media425p";
+@import "./layout/MediaQueries/media375p";
+@import "./layout/MediaQueries/media320p";
